--- a/Albedo.theme.css
+++ b/Albedo.theme.css
@@ -1,2 +1,2 @@
 //META{"name":"Albedo","description":"Overlord Theme","author":"Ax","version":"1"}*//{}
-@import url(https://github.com/Axx01/BetterDiscord-Themes/blob/master/Template.css);
+@import url(https://gitcdn.xyz/repo/Axx01/BetterDiscord-Themes/master/Template.css);
