--- a/Template.css
+++ b/Template.css
@@ -2,7 +2,7 @@
 
 /* root vars
 :root {
-   --bgimageurl: ;
+   --bgimage: ;
    --bgdim: ;
 
    --Primary-Color: ;
@@ -15,7 +15,7 @@
 /* Background */
 
 .app {
-    background-image: url(var(--bgimageurl));
+    background-image: var(--bgimage);
     background-size: cover !important;
     background-color: var(--Primary-Color);
 }
