--- a/ThemeBase.css
+++ b/ThemeBase.css
@@ -20,7 +20,7 @@
     background-color: var(--Primary-Color);
 }
 .guilds-1q_RqH {
-    padding: 12px 0 1px 0px;
+    padding-top: 10px;
 }
 .theme-dark .chat-3bRxxu,
 .theme-dark .content-yTz4x3, 
