Update and rename BDThemeBase.css to Base.css

--- a/Base.css
+++ b/Base.css
@@ -20,7 +20,7 @@
     background-color: var(--Primary-Color);
 }
 .guilds-1q_RqH {
-    padding-top: 10px;
+    padding: 10px 0 0px 0px;
 }
 .theme-dark .chat-3bRxxu,
 .theme-dark .content-yTz4x3, 
