--- a/Base.css
+++ b/Base.css
@@ -2444,3 +2444,6 @@ element.style {
 .noResults-3nKy_n, .scroller-aV2LkH {
     max-height: 300px;
 }
+.theme-dark .root-1BQpZw {
+    background-color: transparent;
+}
