--- a/Base.css
+++ b/Base.css
@@ -2419,3 +2419,6 @@ element.style {
 .theme-dark .action-1lSjCi, .theme-light .action-1lSjCi {
     background: transparent;
 }
+.theme-dark .or-3THJsp, .theme-light .or-3THJsp {
+    background: transparent;
+}
