--- a/Base.css
+++ b/Base.css
@@ -1172,7 +1172,7 @@
     color: white;
     font-weight: 300;
 }
-.avatar-large .status, .avatar-profile .status, .avatar-small .status, .avatar-xlarge .status, .avatar-xsmall .status, .avatar-xxlarge .status {
+.avatar-large .status, .avatar-profile .status, .avatar-xlarge .status, .avatar-xsmall .status, .avatar-xxlarge .status {
     border: none;
 }
 .theme-dark .wrapper-35wsBm {
