--- a/Base.css
+++ b/Base.css
@@ -16,7 +16,7 @@
 
 
 
-.app {
+.appMount-3lHmkl {
     background-image: var(--bgimage);
     background-size: cover !important;
     background-color: var(--Primary-Color);
