--- a/Base.css
+++ b/Base.css
@@ -2124,7 +2124,7 @@ a {
 
 
 .theme-dark .status-2s6iDp {
-    border: none;
+    border: 1px solid #2f3136;
     width: 12px;
     height: 12px;
 }
