--- a/BBMinimalist.css
+++ b/BBMinimalist.css
@@ -110,7 +110,9 @@
 .searchResultsWrap-2DKFzt .channelSeparator-1X1FuH{
  text-align: center;   
 }
-
+.wrapper-2NJDcI {
+	background-color: #36393f;
+}
 .theme-dark .body-SKIE6r {
     background-color: rgba(0,0,0,.5);
 }
