--- a/Base.css
+++ b/Base.css
@@ -2466,3 +2466,6 @@ element.style {
 .channel-2QD9_O .status-1ibiUI {
     border: 1px solid #2f3136;
 }
+.theme-dark .wrapper-1Rf91z {
+    background-color: rgba(0,0,0,0.5);
+}
